# XGif_v5

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  XGif_Architecture_Review.txt  build_optimized.py  config.ini.example  file_version_info.txt  main.py  pyproject.toml  requirements.txt  requirements_cli.txt  requirements_minimal.txt
.claude/: settings.json
BootStrapper/: README.md  XGif_Setup.bat  app_entry.py  build.bat  build_simple.bat  deps_checker.py  deps_installer.py  deps_specs.py  diagnose.py  download_utils.py  extract_utils.py  logging_setup.py  paths.py  requirements.txt  requirements_min.txt  ui_main.py
bootstrap/: __init__.py  app_entry.py  dependency_checker.py  dependency_installer.py  dependency_specs.py  env_diagnostic_ui.py
cli/: __init__.py  config.py  converter.py  doctor.py  main.py  progress.py  recorder.py  signal_handler.py
core/: __init__.py  app_shutdown.py  audio_recorder.py  capability_manager.py  capture_backend.py  capture_worker.py  constants.py  crash_handler.py  defaults.py  dependency_checker.py  events.py  ffmpeg_installer.py  gif_encoder.py  gpu_utils.py  hdr_utils.py  keyboard_display.py  ring_buffer.py  screen_recorder.py  settings.py  utils.py  version.py  watermark.py
docs/: TODO.md
editor/: __init__.py  __main__.py
installer/: xgif_setup.iss
scripts/: create_ico.py  create_selfsign_cert.ps1  sign_exe.ps1
tests/: conftest.py  test_config.py  test_encoder_e2e.py  test_safety.py  test_screen_recorder_runtime.py  test_utils.py  test_version.py
ui/: __init__.py  capture_control_bar.py  (+9 more)
(+102 files in other folders)
